# badge-conagotchi

./: .gitignore  CLAUDE.md  README.md  platformio.ini  pyrightconfig.json  requirements.txt
hardware/: pinout.txt
hardware/kicad/OzSec2026-ESP32/: OzSec2026-ESP32.csv  OzSec2026-ESP32.kicad_pcb  OzSec2026-ESP32.kicad_pro  OzSec2026-ESP32.kicad_sch  fp-lib-table  ozsec-symbols.kicad_sym  sym-lib-table
hardware/kicad/OzSec2026-ESP32/3dmodels/: 82687Minicast_SS.stp  BAT-SMD_MY-AAA-06.step  BAT-SMD_MY-AAA-06.wrl  LED_MB14940_VIS.step  USB_C_Receptable_G-Switch_GT-USB-7010ASV.step.textClipping  XL-5050RGBC_XLG.step
hardware/kicad/OzSec2026-ESP32/ozsec-2024.pretty/: OzSec2024-Copper.kicad_mod  OzSec2024-Silkscreen.kicad_mod
hardware/kicad/OzSec2026-ESP32/ozsec-2025.pretty/: Raffle_copy.kicad_mod
hardware/kicad/OzSec2026-ESP32/ozsec-2026.pretty/: 2026 Sponsor Placeholder.kicad_mod  Art_Plus_Cu.kicad_mod  (+13 more)
hardware/renders/: _index.htm  render.py
hw-test/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.nopsram
hw-test/main/: CMakeLists.txt  badge_hw.h  display.c  display.h  main.c  test_buttons.c  test_buttons.h  test_display.c  test_display.h  test_leds.c  test_leds.h  ws2812.c  ws2812.h
source/: anim.py  boot.py  buttons.py  config.py  display.py  hwtest.py  image_utils.py  leds.py  link.py  main.py  menu.py  screen_manager.py  state.py  wifi.py
source/screens/: __init__.py  conagotchi.py  menu.py  splash.py
src/: main.cpp
tests/: main.py
tools/: convert_image.py
typings/micropython_stdlib_stubs-1.27.0.post2.dist-info/: RECORD
(+35 files in other folders)
